fix(#7): adjust text alignment in Experience section for consistency
- Updated `.experience-text-desc` in `ExperienceCard.scss` to use `text-align: left` for better readability
- Removed redundant `text-align: center` rule
- Centered `.experience-heading` in `WorkExperience.scss` by adding `text-align: center`

link: https://github.com/hmedina24/Hector_Medina_portfolio_-2025/issues/7
fixed #7

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -70,7 +70,6 @@
   margin: 0;
   color: $lightBackground1;
   font-size: 25px;
-  text-align: center;
   font-weight: 700;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -113,7 +112,7 @@
 }
 
 .experience-text-desc {
-  text-align: center;
+  text-align: left;
 }
 
 .experience-text-details {
